fixed spacing for radio buttons & checkboxes

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -18,3 +18,12 @@ h1, h2 {
 .inline {
   display: inline;
 }
+
+.radio_buttons, .check_boxes {
+  margin-left: 10px;
+}
+
+.radio_buttons label, .check_boxes label {
+  // color: green;
+  margin-left: 4px;
+}
